--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BulkyDbConnection": "Server=localhost, 1433;Database=Bulky;Trusted_Connection=false;MultipleActiveResultSets=true;Encrypt=false;user id=SA;password=Computer123#"
+  }
 }
