add migration in ntier architecture

--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BulkyDbConnection": "Server=localhost, 1433;Database=Bulky;Trusted_Connection=false;MultipleActiveResultSets=true;Encrypt=false;user id=SA;password=Computer123#"
+    "BulkyDbConnection": "Server=localhost, 1433;Database=BulkyDb;Trusted_Connection=false;MultipleActiveResultSets=true;Encrypt=false;user id=SA;password=Computer123#"
   }
 }
